# django-forms

./: README.md  pyproject.toml  requirements.txt
nandiasgarden-project/nandiasgarden/: settings.py  urls.py
nandiasgarden-project/pizza/: forms.py  views.py
nandiasgarden-project/pizza/migrations/: 0001_initial.py
nandiasgarden-project/pizza/templates/pizza/: base.html  edit_order.html  order.html  pizzas.html
