[tool.poetry]
name = "django-forms"
version = "0.1.0"
description = ""
authors = ["datttrian <datttrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
